fix: dark mode 오류 임시 해결

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -73,11 +73,10 @@
   margin-left: 1.5rem;
 }
 
-.modeIcon {
+.modeIcon button {
   display: flex;
   cursor: pointer;
   border: none;
-  outline: none;
   background-color: transparent;
 }
 
